--- a/templates/pages/orders/customer_orders.html
+++ b/templates/pages/orders/customer_orders.html
@@ -1,1 +1,14 @@
-<h1>"Customer Name" Orders</h1>
+<h1>{{ customer.name }} Orders</h1>
+
+<table>
+  <tr>
+    <th>id</th>
+    <th>title</th>
+    <th>city</th>
+  </tr>
+  <tr ng-repeat="order in customerOrders">
+    <td>{{ order.id}}</td>
+    <td>{{ order.title}}</td>
+    <td>{{ order.city}}</td>
+  </tr>
+</table>
